--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "filestack-js": "^3.26.1",
+    "framer-motion": "^10.13.0",
     "install": "^0.13.0",
     "next": "13.3.0",
     "npm": "^9.8.0",
